package iphone;

// Interface AparelhoTelefonico
interface AparelhoTelefonico {
    void ligar(String numeroTelefone);
    void atender();
    void iniciarCorreioVoz();
}